--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DebugFlix</string>
+
+    <string name="error_message">Erro ao tentar recuperar os filmes</string>
+    <string name="retry">Tentar novamente</string>
 </resources>
